<?xml version="1.0"?>
<package format="2">
  <name>composiv_tryouts</name>
  <version>0.0.1</version>
  <description>The composiv_tryouts package</description>


  <maintainer email="ahmetardic.kr@gmail.com">ahmet</maintainer>
  <author email="ahmetardic.kr@gmail.com">Ahmet Talha Ardıç</author>
  <url type="website">https://www.linkedin.com/in/ahmet-ardic/</url>

  <license>MIT</license>

  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
